package exception;

public record ErrorResponse(String message) {
}
